; ModuleID = '/home/carl/AnghaBench/streem/src/extr_io.c_strm_io_stop.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_io.c_strm_io_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@STRM_IO_NOWAIT = common dso_local global i32 0, align 4
@io_wait_num = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @strm_io_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strm_io_stop(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @STRM_IO_NOWAIT, align 4
  %9 = and i32 %7, %8
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32, i32* @io_wait_num, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* @io_wait_num, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @io_pop(i32 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = call i32 @strm_stream_close(%struct.TYPE_4__* %17)
  ret void
}

declare dso_local i32 @io_pop(i32) #1

declare dso_local i32 @strm_stream_close(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
